test/corpus/binary_ops.txt
=================
Binary operations
=================

1 + 2 * 3 / 4 < 4 and true

---

(source_file 
  (binary_expression
    left: (binary_expression 
      left: (binary_expression
        left: (int)
        right: (binary_expression
          left: (binary_expression
            left: (int)
            right: (int))
          right: (int)))
      right: (int))
    right: (bool)))
